<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/llGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextViewTitleStyle"
            android:text="@string/app_name"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tvStartGame"
            style="@style/TextViewStyle"
            android:text="@string/start_game"
            android:gravity="center_horizontal"
            android:layout_marginTop="40dp"/>

        <!--<TextView
            android:id="@+id/tvChooseSpaceship"
            style="@style/TextViewStyle"
            android:text="@string/choose_spaceship"
            android:gravity="center_horizontal"
            android:layout_marginTop="40dp"/>-->

        <TextView
            android:id="@+id/tvInstruction"
            style="@style/TextViewStyle"
            android:text="@string/instruction"
            android:gravity="center_horizontal"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/tvAboutAuthors"
            style="@style/TextViewStyle"
            android:text="@string/about_authors"
            android:gravity="center_horizontal"
            android:layout_marginTop="40dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvScore"
        style="@style/TextViewStyle"
        android:layout_margin="@dimen/margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="@string/result"/>

    <ImageView
        android:id="@+id/imgVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:src="@drawable/ic_baseline_volume_up_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>